--- a/index_7.html
+++ b/index_7.html
@@ -150,11 +150,15 @@
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Python <span>75%</span></h3>
+                            <h3>Python <span>73%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
                             <h3>SQL <span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>R programming <span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
