--- a/index_7.html
+++ b/index_7.html
@@ -75,7 +75,7 @@
             <p>2023 Udemy - Completed the Database Design Introduction Online Curse</p>
             <p>2023 Udemy - Completed the R Level 1 - Data Analytics with R Online Curse</p>
             <p>2023 Udemy - Completed the Machine Learning & Deep Learning in Python & R Online Curse</p>
-            <a href="#" class="btn">Read More</a>
+            <a href="FINAL-MANUSCRIPT_DELPOSO-BUGUIS-RIO.pdf" class="btn">Download Thesis</a>
         </div>
     </section>
 
