--- a/index_7.html
+++ b/index_7.html
@@ -76,6 +76,7 @@
             <p>2023 Udemy - Completed the R Level 1 - Data Analytics with R Online Curse</p>
             <p>2023 Udemy - Completed the Machine Learning & Deep Learning in Python & R Online Curse</p>
             <a href="FINAL-MANUSCRIPT_GROUP-3_BUGUIS_DELPOSO_RIO.pdf" class="btn">Download Thesis</a>
+            <a href="#" class="btn">Certificates</a>
         </div>
     </section>
 
@@ -246,6 +247,15 @@
                     <h4>3D-City</h4>
                     <p>It's a 3D animation of the city.</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="Sign-Up.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>SignUp-Form</h4>
+                    <p>Only for Desktop</p>
+                    <a href="https://kiyoshi8.github.io/SignUp/index_9.html?fbclid=IwAR2HLYEG0y7UyuVtyev448u85p-_H1KuNH-XcwnkKBe_T3W5mQlas2AObWM"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
