--- a/index_7.html
+++ b/index_7.html
@@ -76,7 +76,7 @@
             <p>2023 Udemy - Completed the R Level 1 - Data Analytics with R Online Curse</p>
             <p>2023 Udemy - Completed the Machine Learning & Deep Learning in Python & R Online Curse</p>
             <a href="FINAL-MANUSCRIPT_GROUP-3_BUGUIS_DELPOSO_RIO.pdf" class="btn">Download Thesis</a>
-            <a href="#" class="btn">Certificates</a>
+            <a href="https://kiyoshi8.github.io/Swiper/index_11.html" class="btn">Certificates</a>
         </div>
     </section>
 
