--- a/index_7.html
+++ b/index_7.html
@@ -251,7 +251,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="Sign-Up.png" alt="">
+                <img src="Sign-Up.PNG" alt="">
                 <div class="portfolio-layer">
                     <h4>SignUp-Form</h4>
                     <p>Only for Desktop</p>
