--- a/index_7.html
+++ b/index_7.html
@@ -50,6 +50,7 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/kiyoshi-rio-400195219/"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="https://github.com/Kiyoshi8"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.instagram.com/kiyoshic.rio65/"><i class='bx bxl-instagram'></i></a>
                 <a href="https://join.skype.com/invite/wdaMOQd426Ik"><i class='bx bxl-skype' ></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
