--- a/index_7.html
+++ b/index_7.html
@@ -260,6 +260,15 @@
                 </div>
             </div>
 
+            <div class="portfolio-box">
+                <img src="SoonToOpen.PNG" alt="">
+                <div class="portfolio-layer">
+                    <h4>Upcoming</h4>
+                    <p>Countdown for the game released</p>
+                    <a href="https://kiyoshi8.github.io/SoonToOpen/index_22.html"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
