--- a/index_7.html
+++ b/index_7.html
@@ -233,14 +233,14 @@
                 </div>
             </div>
 
-            <div class="portfolio-box">
+            <!--<div class="portfolio-box">
                 <img src="General Link.png" alt="">
                 <div class="portfolio-layer">
                     <h4>General-link</h4>
                     <p>3D animation design of social links.</p>
                     <a href="https://kiyoshi8.github.io/General-link/index_creative1.html?fbclid=IwAR3I1upJ1O5SyxGEenLgsCXWIJKikz81vWEWVCFvyfNCCsUWuK9Ys_kiMwY"><i class='bx bx-link-external'></i></a>
                 </div>
-            </div>
+            </div>-->
 
             <div class="portfolio-box">
                 <img src="3d animation.png" alt="">
