--- a/index_7.html
+++ b/index_7.html
@@ -265,8 +265,8 @@
                 <div class="portfolio-layer">
                     <h4>Upcoming</h4>
                     <p>Countdown for the game released</p>
-                    <!--<a href="https://kiyoshi8.github.io/SoonToOpen/index_22.html"><i class='bx bx-link-external'></i></a>-->
-                    <a href="https://kiyoshi8.github.io/SoonToOpen2/index_25.html?fbclid=IwAR3Y4UOGlsaU_rrWg8ct7YSsQ6_2wWn5fNeGI2jbSOkLcbzPG0D6ZFaWT_E"><i class='bx bx-link-external'></i></a>
+                    <a href="https://kiyoshi8.github.io/SoonToOpen/index_22.html"><i class='bx bx-link-external'></i></a>
+                    <!--<a href="https://kiyoshi8.github.io/SoonToOpen2/index_25.html?fbclid=IwAR3Y4UOGlsaU_rrWg8ct7YSsQ6_2wWn5fNeGI2jbSOkLcbzPG0D6ZFaWT_E"><i class='bx bx-link-external'></i></a>-->
                 </div>
             </div>
 
