--- a/index_7.html
+++ b/index_7.html
@@ -245,9 +245,9 @@
             <div class="portfolio-box">
                 <img src="3d animation.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>3D-City</h4>
-                    <p>It's a 3D animation of the city.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>2048 Game</h4>
+                    <p>Game logic for fun!.</p>
+                    <a href="https://kiyoshi8.github.io/kiyoshi-js-2048-fcb3/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
