--- a/index_7.html
+++ b/index_7.html
@@ -243,7 +243,7 @@
             </div>-->
 
             <div class="portfolio-box">
-                <img src="3d animation.png" alt="">
+                <img src="ladgame.PNG" alt="">
                 <div class="portfolio-layer">
                     <h4>2048 Game</h4>
                     <p>Game logic for fun!.</p>
