--- a/index_7.html
+++ b/index_7.html
@@ -270,6 +270,15 @@
                 </div>
             </div>
 
+            <div class="portfolio-box">
+                <img src="Vista-PPT-Hobbies.PNG" alt="">
+                <div class="portfolio-layer">
+                    <h4>My Collection</h4>
+                    <p>Using VistaCreate, PowerPoint and my other Account</p>
+                    <a href="https://kiyoshi8.github.io/GlowCards-Kiyoshi-Hobbies/index_30.html"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
