--- a/index_7.html
+++ b/index_7.html
@@ -73,8 +73,8 @@
             <h3>2019-2023</h3>
             <p>Graduated with a Bachelor of Science Degree in Applied Mathematics at Cavite State University - Main Campus</p>
             <p>2021 Radicands - Awarded for Ms. Popularity of Applied Mathematics - 1st place in online votes</p>
-            <p>2023 Udemy - Completed the Database Design Introduction Online Curse</p>
-            <p>2023 Udemy - Completed the R Level 1 - Data Analytics with R Online Curse</p>
+            <p>2023 Udemy - Completed the Database Design Introduction Online Course</p>
+            <p>2023 Udemy - Completed the R Level 1 - Data Analytics with R Online Course</p>
             <!--<p>2023 Udemy - Completed the Machine Learning & Deep Learning in Python & R Online Curse</p>-->
             <a href="FINAL-MANUSCRIPT_GROUP-3_BUGUIS_DELPOSO_RIO.pdf" class="btn">Download Thesis</a>
             <a href="https://kiyoshi8.github.io/Swiper/index_11.html" class="btn">Certificates</a>
