--- a/index_7.html
+++ b/index_7.html
@@ -280,6 +280,15 @@
                 </div>
             </div>
 
+            <div class="portfolio-box">
+                <img src="MusicPlaylist.PNG" alt="">
+                <div class="portfolio-layer">
+                    <h4>My Collection</h4>
+                    <p></p>
+                    <a href="https://kiyoshi8.github.io/OSTPlaylist/index_30.html"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
