--- a/index_7.html
+++ b/index_7.html
@@ -282,7 +282,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="MusicPlaylist.PNG" alt="">
+                <img src="MusicPlaylist2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>My Music Playlist</h4>
                     <p></p>
