--- a/index_7.html
+++ b/index_7.html
@@ -216,11 +216,14 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="Calculator-app1.png" alt="">
+                <img src="Screenshot 2024-07-11 201034.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Calculator-App</h4>
+                    <h4>Image-slider</h4>
+                    <p>Cool image slider effects with pop-up video (Only for Desktop)</p>
+                    <a href="https://kiyoshi8.github.io/Image-Slider/index_40.html"><i class='bx bx-link-external'></i></a>
+                    <!--<h4>Calculator-App</h4>
                     <p>Performing mathematical calculations.</p>
-                    <a href="https://kiyoshi8.github.io/Calculator-App/index_1.html?fbclid=IwAR3T3uWevvi6Ss3AMmUuTUiwyEdL6LP4o8dlDQL1tL2gunEuWA_i4b4QWuw"><i class='bx bx-link-external'></i></a>
+                    <a href="https://kiyoshi8.github.io/Calculator-App/index_1.html?fbclid=IwAR3T3uWevvi6Ss3AMmUuTUiwyEdL6LP4o8dlDQL1tL2gunEuWA_i4b4QWuw"><i class='bx bx-link-external'></i></a>-->
                 </div>
             </div>
 
