--- a/index_7.html
+++ b/index_7.html
@@ -144,9 +144,8 @@
                             <h3>HTML <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-
                         <div class="progress">
-                            <h3>CSS <span>85%</span></h3>
+                            <h3>CSS <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
@@ -165,6 +164,10 @@
                             <h3>R programming <span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
+                        <div class="progress">
+                            <h3>C# <span>75%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -179,12 +182,11 @@
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Web Design <span>95%</span></h3>
+                            <h3>Web Design <span>98%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-
                         <div class="progress">
-                            <h3>Web Development <span>65%</span></h3>
+                            <h3>Web Development <span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
